--- a/adminDashboard.css
+++ b/adminDashboard.css
@@ -1,5 +1,9 @@
 :root {
     font-size: 2px;
+    box-sizing: border-box;
+}
+*, *::before, *::after {
+    box-sizing: inherit;
 }
 #container {
     display: grid;
@@ -24,4 +28,41 @@
 }
 .sidebar #headSpan {
     font-size: 16rem;
+}
+header {
+    grid-row: 1/3;
+    grid-column: 2/5;
+    margin-left: 20rem;
+    grid-auto-flow: column;
+}
+header input {
+    margin-right: 40rem;
+    width: 225rem;
+    height: 13rem;
+    border-radius: 2.5rem;
+    border: 0.5rem black ridge;
+    background-color: rgb(211, 211, 211);
+    
+}
+header div {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 8rem;
+    margin-top: 14rem;
+}
+header span:nth-child(2) {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 6rem;
+}
+header button:first-of-type{
+    margin-left: 118rem;
+}
+header button {
+    background-color: rgb(9, 161, 231);
+    border-radius: 25%;
+    width: 36rem;
+    height: 16rem;
+    border: 1px black solid;
+    color: white;
 }
